# pytdl

./: .gitignore  README.md  makefile  pyproject.toml
src/pytdl/: cli.py
src/pytdl/core/: download.py  main.py  sanitize.py  select.py
src/pytdl/pytdl/: main.py
src/pytdl/select/: main.py
tests/: test_pytdl.py
